--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,32 @@
 spring.application.name=challenge
 
+# Storage configuration
 storage.file.items=src/main/resources/data/items.json
+
+# Virtual Threads Configuration (Java 21)
+spring.threads.virtual.enabled=true
+spring.threads.virtual.name-prefix=virtual-thread-
+
+# Server Configuration
+server.port=8080
+server.servlet.context-path=/
+
+# OpenAPI/Swagger Configuration
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.swagger-ui.filter=true
+springdoc.swagger-ui.display-request-duration=true
+springdoc.swagger-ui.display-operation-id=true
+springdoc.swagger-ui.default-models-expand-depth=3
+springdoc.swagger-ui.default-model-expand-depth=3
+springdoc.swagger-ui.doc-expansion=none
+springdoc.swagger-ui.show-extensions=true
+springdoc.swagger-ui.show-common-extensions=true
+
+# Logging Configuration
+logging.level.com.mp.challenge=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springdoc=DEBUG
